fix like icon alignment

--- a/src/components/StoryViewer/storyViewer.module.css
+++ b/src/components/StoryViewer/storyViewer.module.css
@@ -87,6 +87,8 @@
   position: absolute;
   bottom: 20px;
   right: 20px;
+  display: flex;
+  align-items: center;
 }
 
 .categoryStory {
